# prologlib

./: .gitignore  CMakeLists.txt  README.md  cstmlib.pc.in  prologlib.pc.in
include/cstmlib/: Log.h  Profiling.h
include/pll/: Log.h  Profiling.h
src/: Log.cpp  Profiling.cpp
tests/: CMakeLists.txt  LogTest.cpp  ProfileTest.cpp  main.cpp
